# deepseek-arkey

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.githooks/: commit-msg
.github/workflows/: ci.yml
docs/: commit-discipline.md  phase12-dock-approval-scope.md  progress-handoff-2026-05-04.md  session-handoff.md
docs/development/: README.zh-CN.md  coding-principles.md  coding-principles.zh-CN.md  commit-discipline.md  phase11-routing-audit.md  phase12-dock-approval-scope.md
scripts/: agent-startup-smoke.py  check_commit_msg.py  claude-audit-approval-debug.py  claude-dogfood-first-pass.sh  composer-cursor-smoke.py  docked-smoke.py  kimi-deepseek-smoke.sh  kimi-dock-rendering-audit.sh  live-docked-routing-smoke.py  persistent-navigation-test.sh  phase10-scope-probe.py  phase11-docked-routing-smoke.py  phase12-dock-approval-smoke.py  phase13-commit-audit-approval-smoke.py  phase14-commit-audit-preflight-smoke.py  phase15-progress-dock-smoke.py  phase16-dock-cancel-smoke.py  routing-debug.py  smoke_lib.py  test_check_commit_msg.py  verify-local.sh
src/: agent.rs  answer_format.rs  cancel.rs  cli.rs  features.rs  input.rs  intent.rs  internet.rs  lib.rs  main.rs  provider.rs  repl.rs  runtime.rs  safety.rs  session.rs  terminal_markdown.rs  terminal_width.rs  ui.rs  workspace.rs
src/agent/: approval_text.rs  commit_audit.rs  decision.rs  dispatch.rs  loop.rs  loop_tests.rs  notes.rs  read_tools.rs  runner.rs  summary.rs  transcript.rs  types.rs  workspace.rs  write_tools.rs
src/input/: approval.rs  composer.rs  composer_tests.rs  inline.rs  slash.rs  (+2 more)
(+21 files in other folders)
