[package]
name = "deepseek"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.29", features = ["bracketed-paste"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.14"
