[package]
name = "deepseek-arkey"
version = "1.3.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "deepseek"
path = "src/bin/deepseek.rs"
test = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.29", features = ["bracketed-paste"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[dev-dependencies]
tempfile = "3.14"
